# code

./: .gitmodules  CMakeLists.txt  README.md
include/: code.hpp
include/code/: binary.hpp  concepts.hpp  counter.hpp  elias_delta.hpp  elias_gamma.hpp  huffman.hpp  huffman_code.hpp  huffman_tree.hpp  range.hpp  rice.hpp  unary.hpp  universe.hpp  vbyte.hpp
include/code/internal/: bits.hpp
test/: CMakeLists.txt  helpers.hpp  test_binary.cpp  test_elias_delta.cpp  test_elias_gamma.cpp  test_examples.cpp  test_huffman.cpp  test_rice.cpp  test_unary.cpp  test_universal.cpp  test_universe.cpp  test_vbyte.cpp
